# creste_public

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
configs/: distillation.yaml  ssc_sam.yaml  traversability.yaml
configs/dataset/: creste.yaml
configs/dataset/distillation/: creste_pefree_dinov2.yaml
configs/dataset/ssc_sam/: creste_sam2elev_joint_dinov2.yaml
configs/dataset/traversability/: creste_sam2elevtraverse_horizon.yaml
configs/trainer/: standard.yaml  standard_single.yaml
configs/visualize/: effnet_distillation.yaml
creste/: train_pefree.py  train_ssc.py  train_traversability.py
creste/datasets/: coda_dataloader_depth.py  coda_helpers.py  coda_utils.py  codapefree_dataloader.py  dataloader.py
creste/models/: depth.py  distillation.py  foundation.py  lfd.py  stereodepth.py  terrainnet.py  vision_encoder.py
creste/models/blocks/: cnnmlp.py  conv.py  (+7 more)
creste/utils/: aggregator_utils.py  depth_utils.py  elevation_utils.py  feature_extractor.py  geometry.py  infill.py  loss_utils.py  pointcloud_vis.py  projection.py  tb_utils.py  train_utils.py  utils.py  visualization.py  visualize_elevation_gt.py
docs/: DATA_PREPARATION.md  RELEASE.md  TRAINING.md
scripts/preprocessing/: build_dense_depth.py  build_feature_map.py  build_sam_map.py  build_splits.py  create_pe_dataset.py  create_sam_creste.sh  create_sam_dataset.py  create_traversability_dataset.py  downsample_frames.py
scripts/release/: download_dataset.sh  download_weights.sh  package_data.py
scripts/runtime/: compile.py
scripts/traversability/: train_creste.sh
(+12 files in other folders)
